--- a/lockss-alpine/bin/build
+++ b/lockss-alpine/bin/build
@@ -29,4 +29,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-apk list "${1}" 2> /dev/null | grep -q '\[installed\]'
+PARENT_DIR="$(realpath "$(dirname "${0}")/..")"
+TAG='lockss/alpine:3.9'
+
+docker build --tag "${TAG}" "${PARENT_DIR}" \
+&& [ "X${1}" = "X--push" ] \
+&& docker push "${TAG}"
