--- a/lockss-ipm/bin/build
+++ b/lockss-ipm/bin/build
@@ -29,13 +29,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-PKGS=''
-for ipkg in "$@" ; do
-  pkg=$(ipm-translate "${ipkg}")
-  if [ "$(ipm-check "${pkg}")" != "true" ]; then
-    PKGS="${PKGS} ${pkg}"
-  fi
-done
-ipm-update-impl
-ipm-install-impl ${PKGS}
-ipm-clean-impl
+PARENT_DIR="$(realpath "$(dirname "${0}")/..")"
+TAG="lockss/ipm:$(cat "${PARENT_DIR}/VERSION")"
+
+docker build --tag "${TAG}" "${PARENT_DIR}" \
+&& [ "X${1}" = "X--push" ] \
+&& docker push "${TAG}"
