--- a/lockss-ipm/bin/build
+++ b/lockss-ipm/bin/build
@@ -29,9 +29,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-PARENT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG="lockss/ipm:$(cat "${PARENT_DIR}/VERSION")"
+ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
+TAG="lockss/lockss-ipm:$(cat "${ROOT_DIR}/VERSION")"
 
-docker build --tag "${TAG}" "${PARENT_DIR}" \
-&& [ "X${1}" = "X--push" ] \
+docker build --tag "${TAG}" "${ROOT_DIR}" \
+&& [ "${1}" = "--push" ] \
 && docker push "${TAG}"
