Upgrade to lockss-ipm 2.0 indirectly. Bug fixes.

--- a/lockss-hdfs/.dockerignore
+++ b/lockss-hdfs/.dockerignore
@@ -28,6 +28,6 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 # Exclude everything but what is needed
-*
+/*
 # Include the docker directory
-!/docker
+!/docker/
