--- a/lockss-hdfs/bin/build
+++ b/lockss-hdfs/bin/build
@@ -32,7 +32,7 @@
 ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
 DOWNLOAD="${ROOT_DIR}/download"
 TEMP="${ROOT_DIR}/docker/temp"
-TAG='lockss/lockss-hdfs'
+TAG='lockss/lockss-hdfs:1.1'
 
 HADOOP_VERSION='3.0.3'
 HADOOP_URL="https://archive.apache.org/dist/hadoop/common/hadoop-${HADOOP_VERSION}/hadoop-${HADOOP_VERSION}.tar.gz"
