Set java.io.tmpdir. More verbose entry point.

--- a/lockss-spring/Dockerfile
+++ b/lockss-spring/Dockerfile
@@ -73,6 +73,6 @@ ENTRYPOINT ["/usr/local/bin/docker-entrypoint"]
 HEALTHCHECK --retries=1 --start-period=60s CMD ["/usr/local/bin/docker-healthcheck"]
 
 COPY /docker/bin/* /usr/local/bin/
-COPY /docker/lockss/etc.base/lockss_bootstrap_base.tpl "${LOCKSS_HOME}/etc.base/"
+COPY /docker/lockss/etc.base/* "${LOCKSS_HOME}/etc.base/"
 ONBUILD COPY /docker/lockss/etc.base/lockss_service_base.tpl "${LOCKSS_HOME}/etc.base/"
 ONBUILD COPY /target/current-with-deps.jar "${LOCKSS_HOME}/lib/lockss.jar"
