Build from tag file. Precise versioning for Alpine and Ubuntu. Use slim variant of Debian. Proper check of --push in an if statement. Cosmetic.

--- a/lockss-alpine/bin/build
+++ b/lockss-alpine/bin/build
@@ -30,8 +30,10 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG='lockss/lockss-alpine:3.9-2'
+TAG_FILE="${ROOT_DIR}/VERSION"
+TAG="lockss/lockss-alpine:$(cat "${TAG_FILE}")"
 
 docker build --tag "${TAG}" "${ROOT_DIR}" \
-&& [ "${1}" = "--push" ] \
-&& docker push "${TAG}"
+&& if [ "${1}" = "--push" ]; then
+     docker push "${TAG}"
+   fi
