--- a/lockss-debian/bin/build
+++ b/lockss-debian/bin/build
@@ -29,9 +29,11 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-PARENT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG='lockss/lockss-debian:stretch-20190228-2'
+ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
+TAG_FILE="${ROOT_DIR}/VERSION"
+TAG="lockss/lockss-debian:$(cat "${TAG_FILE}")"
 
-docker build --tag "${TAG}" "${PARENT_DIR}" \
-&& [ "${1}" = "--push" ] \
-&& docker push "${TAG}"
+docker build --tag "${TAG}" "${ROOT_DIR}" \
+&& if [ "${1}" = "--push" ]; then
+     docker push "${TAG}"
+   fi
