--- a/lockss-ipm/bin/build
+++ b/lockss-ipm/bin/build
@@ -30,8 +30,10 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG="lockss/lockss-ipm:$(cat "${ROOT_DIR}/VERSION")"
+TAG_FILE="${ROOT_DIR}/VERSION"
+TAG="lockss/lockss-ipm:$(cat "${TAG_FILE}")"
 
 docker build --tag "${TAG}" "${ROOT_DIR}" \
-&& [ "${1}" = "--push" ] \
-&& docker push "${TAG}"
+&& if [ "${1}" = "--push" ]; then
+     docker push "${TAG}"
+   fi
