--- a/lockss-ubuntu/bin/build
+++ b/lockss-ubuntu/bin/build
@@ -29,9 +29,11 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-PARENT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG='lockss/lockss-ubuntu:xenial-20190122-2'
+ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
+TAG_FILE="${ROOT_DIR}/VERSION"
+TAG="lockss/lockss-ubuntu:$(cat "${TAG_FILE}")"
 
-docker build --tag "${TAG}" "${PARENT_DIR}" \
-&& [ "X${1}" = "X--push" ] \
-&& docker push "${TAG}"
+docker build --tag "${TAG}" "${ROOT_DIR}" \
+&& if [ "${1}" = "--push" ]; then
+     docker push "${TAG}"
+   fi
