--- a/lockss-pywb/bin/build
+++ b/lockss-pywb/bin/build
@@ -30,8 +30,15 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG='lockss/lockss-pywb:2.2.20190311-1'
+TAG='lockss/lockss-pywb:2.2.20190311-2'
 
-docker build --tag "${TAG}" "${ROOT_DIR}" \
-&& [ "${1}" = "--push" ] \
-&& docker push "${TAG}"
+PUSH=''
+if [ "${1}" == '--push' ]; then
+  PUSH='true'
+  shift
+fi
+
+docker build --tag "${TAG}" "$@" "${ROOT_DIR}" \
+&& if [ -n "${PUSH}" ]; then
+     docker push "${TAG}"
+   fi
