Bugfix: VOLUME directive made unaltered config.yaml file appear in VOLUME_DIR. Bugfix: api_url had literal 'collectionid' instead of the right collection ID. Update to latest Pywb (2.2.20190410). Use VERSION file.

--- a/lockss-pywb/bin/build
+++ b/lockss-pywb/bin/build
@@ -30,7 +30,8 @@
 # POSSIBILITY OF SUCH DAMAGE.
 
 ROOT_DIR="$(realpath "$(dirname "${0}")/..")"
-TAG='lockss/lockss-pywb:2.2.20190311-2'
+TAG_FILE="${ROOT_DIR}/VERSION"
+TAG="lockss/lockss-pywb:$(cat "${TAG_FILE}")"
 
 PUSH=''
 if [ "${1}" == '--push' ]; then
