--- a/lockss-spring/Dockerfile
+++ b/lockss-spring/Dockerfile
@@ -35,6 +35,7 @@ FROM lockss/lockss-alpine:3.9.3-1
 
 ONBUILD ARG LABEL_BUILD_DATE
 ONBUILD ARG LABEL_DESCRIPTION
+ONBUILD ARG LABEL_GIT_DIRTY
 ONBUILD ARG LABEL_LOCKSS_RELEASE
 ONBUILD ARG LABEL_MAVEN_ARTIFACT
 ONBUILD ARG LABEL_MAVEN_GROUP
