--- a/lockss-pywb/Dockerfile
+++ b/lockss-pywb/Dockerfile
@@ -37,6 +37,7 @@ ENV LOCKSS_WAIT_FOR_PORT_TIMEOUT=3 \
     LOCKSS_WAIT_FOR_PORT_SLEEP=10 \
     LOCKSS_WAIT_FOR_200_TIMEOUT=3 \
     LOCKSS_WAIT_FOR_200_SLEEP=10 \
+    SECRETS=/run/secrets \
     PYWB_HOME=/webarchive \
     PYWB_COLLECTION=lockss \
     PYWB_DATA=/data \
