--- a/lockss-openwayback/Dockerfile
+++ b/lockss-openwayback/Dockerfile
@@ -37,6 +37,7 @@ ENV LOCKSS_WAIT_FOR_PORT_TIMEOUT=3 \
     LOCKSS_WAIT_FOR_PORT_SLEEP=10 \
     LOCKSS_WAIT_FOR_200_TIMEOUT=3 \
     LOCKSS_WAIT_FOR_200_SLEEP=10 \
+    SECRETS=/run/secrets \
     OPENWB_COLLECTION=lockss
 
 # Inherit IPM from lockss-debian
