--- a/lockss-pywb/Dockerfile
+++ b/lockss-pywb/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) 2000-2019, Board of Trustees of Leland Stanford Jr. University
+# Copyright (c) 2000-2020, Board of Trustees of Leland Stanford Jr. University
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -29,7 +29,7 @@
 
 FROM lockss/lockss-debian:stretch-20190326-slim-1 AS lockss-debian
 
-FROM webrecorder/pywb:2.2.20190410
+FROM webrecorder/pywb:2.4.2
 
 MAINTAINER "LOCKSS Buildmaster" <buildmaster@lockss.org>
 
