Add the logs directory to the openwayback and pywayback containers.  Modify entrypoint to redirect stdout and stderr which are currently going to console to stdout.log

--- a/lockss-pywb/Dockerfile
+++ b/lockss-pywb/Dockerfile
@@ -41,7 +41,8 @@ ENV LOCKSS_WAIT_FOR_PORT_TIMEOUT=3 \
     PYWB_HOME=/webarchive \
     PYWB_COLLECTION=lockss \
     PYWB_DATA=/data \
-    PYWB_PORT=8080
+    PYWB_PORT=8080 \
+    LOCKSS_LOGS=/var/log/lockss
 
 ENV INIT_COLLECTION=${PYWB_COLLECTION} \
     VOLUME_DIR=${PYWB_DATA}
