--- a/lockss-alpine/Dockerfile
+++ b/lockss-alpine/Dockerfile
@@ -27,9 +27,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-ipm:2.1 as lockss-ipm
+FROM lockss/lockss-ipm:2.2-SNAPSHOT as lockss-ipm
 
-FROM alpine:3.10.1
+FROM alpine:3.13.5
 
 MAINTAINER "LOCKSS Buildmaster" <buildmaster@lockss.org>
 
