--- a/lockss-spring/Dockerfile
+++ b/lockss-spring/Dockerfile
@@ -27,9 +27,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-alpine:3.10.1-1 as lockss-alpine
+FROM lockss/lockss-alpine:3.13.5-1 as lockss-alpine
 
-FROM adoptopenjdk/openjdk8:jdk8u212-b04-alpine
+FROM adoptopenjdk/openjdk8:jdk8u292-b10-alpine
 
 COPY --from=lockss-alpine /usr/local/etc/ipm/* /usr/local/etc/ipm/
 COPY --from=lockss-alpine /usr/local/bin/* /usr/local/bin/
@@ -133,6 +133,7 @@ RUN ipm-update \
                 gettext \
                 jq \
                 netcat \
+                tzdata \
  && ipm-clean \
  && mkdir -m 0755 "${LOCKSS_HOME}" \
  && mkdir -m 0777 "${LOCKSS_HOME}/etc"
