--- a/lockss-debian/Dockerfile
+++ b/lockss-debian/Dockerfile
@@ -27,9 +27,9 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-ipm:2.1 AS lockss-ipm
+FROM lockss/lockss-ipm:2.2-SNAPSHOT AS lockss-ipm
 
-FROM debian:stretch-20190326-slim
+FROM debian:9.8-slim
 
 MAINTAINER "LOCKSS Buildmaster" <buildmaster@lockss.org>
 
