Add logrotate configuration to lockss-openwayback, lockss-pywb.

--- a/lockss-openwayback/Dockerfile
+++ b/lockss-openwayback/Dockerfile
@@ -46,14 +46,17 @@ COPY --from=lockss-debian /usr/local/etc/ipm/* /usr/local/etc/ipm/
 COPY --from=lockss-debian /usr/local/bin/* /usr/local/bin/
 RUN ipm-setup apt-transport-https
 
-# Install curl, envsubst and nc
+# Install curl, envsubst, logrotate, nc and tzdata
 RUN ipm-update \
  && ipm-install curl \
                 gettext \
+                logrotate \
                 netcat \
+                tzdata \
  && ipm-clean
 
 COPY /docker/openwayback/* /usr/local/share/lockss-openwayback/
 COPY /docker/bin/* /usr/local/bin/
+COPY /docker/logrotate/* /etc/logrotate.d/
 
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint"]
