--- a/lockss-openwayback/Dockerfile
+++ b/lockss-openwayback/Dockerfile
@@ -27,7 +27,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-debian:9.8-slim-SNAPSHOT AS lockss-debian
+FROM lockss/lockss-debian:9.8-slim AS lockss-debian
 
 FROM iipc/openwayback:openwayback-2.4.0
 
