--- a/lockss-pywb/Dockerfile
+++ b/lockss-pywb/Dockerfile
@@ -1,4 +1,4 @@
-# Copyright (c) 2000-2020, Board of Trustees of Leland Stanford Jr. University
+# Copyright (c) 2000-2021, Board of Trustees of Leland Stanford Jr. University
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -27,7 +27,7 @@
 # ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 # POSSIBILITY OF SUCH DAMAGE.
 
-FROM lockss/lockss-debian:stretch-20190326-slim-1 AS lockss-debian
+FROM lockss/lockss-debian:9.8-slim AS lockss-debian
 
 FROM webrecorder/pywb:2.4.2
 
@@ -41,7 +41,8 @@ ENV LOCKSS_WAIT_FOR_PORT_TIMEOUT=3 \
     PYWB_HOME=/webarchive \
     PYWB_COLLECTION=lockss \
     PYWB_DATA=/data \
-    PYWB_PORT=8080
+    PYWB_PORT=8080 \
+    LOCKSS_LOGS=/var/log/lockss
 
 ENV INIT_COLLECTION=${PYWB_COLLECTION} \
     VOLUME_DIR=${PYWB_DATA}
@@ -51,15 +52,18 @@ COPY --from=lockss-debian /usr/local/etc/ipm/* /usr/local/etc/ipm/
 COPY --from=lockss-debian /usr/local/bin/* /usr/local/bin/
 RUN ipm-setup apt-transport-https
 
-# Install curl, envsubst and nc
+# Install curl, envsubst, logrotate, nc and tzdata
 RUN ipm-update \
  && ipm-install curl \
                 gettext \
+                logrotate \
                 netcat \
+                tzdata \
  && ipm-clean
 
 COPY /docker/pywb/etc/config.yaml.tpl /usr/local/share/pywb/etc/
 COPY /docker/bin/* /usr/local/bin/
+COPY /docker/logrotate/* /etc/logrotate.d/
 
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint"]
 
